# python-scripts

employee-data/: main.py  pyproject.toml  test.csv
playrix/: .gitignore  README.md  main.py  pyproject.toml
sales-data/: main.py  pyproject.toml  test.csv
